--- a/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.scss
@@ -40,7 +40,7 @@
   //   background: blue;
   // }
 
-  color: #f2f5f7 !important;
+  color: #fbcbec !important;
   ::ng-deep {
     .mat-list-item-content {
       background: #eb65d1 !important;
@@ -56,3 +56,5 @@
   font-weight: 100;
   letter-spacing: 1px;
 }
+
+
