--- a/HHIS_Frontend/HHISIT2018144/src/app/Doctor/edit-doctor-prescription/edit-doctor-prescription.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Doctor/edit-doctor-prescription/edit-doctor-prescription.component.html
@@ -1,11 +1,17 @@
 <div class="row justify-content-between text-left">
-  <div class="form-group col-sm-8 flex-column d-flex">   <h2 mat-dialog-title>Patient Prescription Details</h2></div>
+  <div class="form-group col-sm-8 flex-column d-flex">   <h2 mat-dialog-title>Patient Prescription Details <span style="color:rgb(0, 89, 255);cursor: pointer;" (click)="openPDF()"> <i class="fas fa-file-download"></i> </span></h2></div>
   <div class="form-group col-sm-4 flex-column d-flex"> 
       <button  mat-raised-button color="warn" (click)="cancel()">X</button> </div>
 </div>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" id="htmlData">
   <form class="form-card"  [formGroup]="doctorService.medicineDescriptionForm" (submit)="onSubmit()">
 
+    <div class="row justify-content-between text-left">
+      <div class="form-group col-sm-11 flex-column d-flex"> 
+        <label for="">Disease Description</label>
+          <input type="text" id="disease" formControlName="disease"  placeholder="Disease Description"> 
+      </div>
+   </div>
 
       <div class="row justify-content-between text-left">
         <div class="form-group col-sm-6 flex-column d-flex"> 
