--- a/HHIS_Frontend/HHISIT2018144/src/app/Doctor/prescription-table/prescription-table.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Doctor/prescription-table/prescription-table.component.html
@@ -56,22 +56,16 @@
           <br>
           
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 staffTable">
-          
-              <!--- Note that these columns can be defined in any order.
-                    The actual rendered columns are set as a property on the row definition" -->
-            
-           
-              <ng-container matColumnDef="patientName">
-                <th mat-header-cell *matHeaderCellDef> Patient Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.patientName}} </td>
-              </ng-container>
-            
               
               <ng-container matColumnDef="patientNic">
                 <th mat-header-cell *matHeaderCellDef> Patient NIC </th>
                 <td mat-cell *matCellDef="let element"> {{element.patientNic}} </td>
               </ng-container>
             
+              <ng-container matColumnDef="disease">
+                <th mat-header-cell *matHeaderCellDef> Disease </th>
+                <td mat-cell *matCellDef="let element"> {{element.disease}} </td>
+              </ng-container>
               
               <ng-container matColumnDef="descrDate">
                 <th mat-header-cell *matHeaderCellDef> Date </th>
