--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/staffDetails/staff/staff.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/staffDetails/staff/staff.component.html
@@ -1,17 +1,87 @@
 <br>
+<div id="htmlData">
 <div class="container staffTableTop">
   <div class="row">
-    <div class="col-sm-6">
-      <button style="margin-top: 15px; margin-right: 2px; width: 60%;" mat-raised-button (click)="openDialog()">Create <mat-icon>queue</mat-icon></button>
+    <div class="col-sm-4">
+      <button style=" width: 100%;" mat-raised-button (click)="openDialog()">Create <mat-icon>queue</mat-icon></button>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-8">
+      <h1 style="text-align:center;padding: 5px; background-color: rgb(0, 66, 147);color: #fff;">Staff Details</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+        
+      <mat-form-field appearance="legacy" >
+        <mat-label>Search Joint Date Range</mat-label>
+        <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRange" >
+          <input matStartDate formControlName="start"  placeholder="Start Date">
+          <input matEndDate formControlName="end" (dateChange)="listStaffDateBtwn()" placeholder="End Date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
+    </div>
+    <div class="col-sm-4">
+      <br>
+      <select (change)="onRoleChange($event)">
+        <option value="">Search Staff Role</option>
+        <option value="nurse practitioners">nurse practitioners</option>
+        <option value="enrolled nurses ">enrolled nurses </option>
+        <option value="registered nurses">registered nurses</option>
+            <option value="pharmacists">pharmacists</option>
+            <option value="dietitians">dietitians</option>
+            <option value="occupational therapists">occupational therapists</option>
+            <option value="clinical assistants">clinical assistants</option>
+           <option value="porters">porters</option>
+            <option value="ward clerks">ward clerks</option>
+      </select>
+    </div>
+    <div class="col-sm-4">
       <mat-form-field fxFlex="100%">
         <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filter" >
       </mat-form-field>
     </div>
   </div>
+  <div class="row">
+
+    <div class="col-sm-4">
+      <br>
+      <div class="row justify-content-between text-left" style="width: 95%; margin:0% auto;">
+        <div class="col-md-12 " style=" padding-top: 5px; text-align: center; color: rgba(27, 27, 27, 0.759); background-image: linear-gradient(-90deg, rgb(177, 161, 241) 95%,
+        rgb(41, 7, 113) 50%); border-radius: 5px;">
+          <p>Total Male</p>
+          <i style="font-size: 25px; " class="fas fa-male"></i>
+          <h4>{{totalMale}}</h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <br>
+      <div class="row justify-content-between text-left" style="width: 95%; margin:0% auto;">
+        <div class="col-md-12 " style=" padding-top: 5px; text-align: center; color: rgba(27, 27, 27, 0.759); background-image: linear-gradient(-90deg, rgb(229, 161, 241) 95%,
+        rgb(113, 7, 106) 50%); border-radius: 5px;">
+          <p>Total Male</p>
+          <i style="font-size: 25px; " class="fas fa-female"></i>
+          <h4>{{totalFemale}}</h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <br>
+      <select (change)="onGenderChange($event)">
+        <option value="">Search Gender</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+      </select>
+      <br>
+      <br><br>
+      <button mat-raised-button color="primary"(click)="openPDF()"><i class="fas fa-download"></i> Generate Report</button>
+    </div>
+  </div>
 </div>
 <br>
+
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 staffTable">
 
@@ -78,4 +148,41 @@
   showFirstLastButtons 
   aria-label="Select page of periodic elements" class="staffTable">
 </mat-paginator>
+
+<br>
+<br>
+<div class="container staffTableTop"
+style="background-color: black; color:#fff;padding: 10px;">
+  <div class="row">
+   <div class="col-sm-6">
+    <div class="classic-tabs" style="padding-top: 15px; padding-right: 15px;">
+                                
+      <canvas  baseChart 
+      [data]="staffChart"
+      [options]="barChartOptions"
+      [plugins]="barChartPlugins"
+      [legend]="barChartLegend"
+      [type]="'bar'">
+      </canvas>
+  
+  
+    </div>
+     
+   </div>
+   <div class="col-sm-3">
+    <p> ward clerks: <b>{{ ward_clerks?.length}}</b></p>
+    <p>enrolled nurses: <b>{{enrolled_nurses?.length}}</b></p>
+    <p>pharmacists: <b>{{pharmacists?.length}}</b></p>
+    <p>nurse practitioners: <b>{{nurse_practitioners?.length}}</b></p>
+     <p>registered nurses: <b>{{registered_nurses?.length}}</b></p>
+  </div>
+   <div class="col-sm-3">
+    <p>occupational therapists: <b>{{occupational_therapists?.length}}</b></p>
+    <p>porters: <b>{{porters?.length}}</b></p>
+    <p>clinical assistants: <b>{{clinical_assistants?.length}}</b></p>
+    <p>dietitians: <b>{{dietitians?.length}}</b></p>
+  </div>
+  </div>
+</div>
+</div>
   
