--- a/HHIS_Frontend/HHISIT2018144/src/app/header/setting/setting.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/header/setting/setting.component.html
@@ -16,7 +16,8 @@
                 <h3>{{dataSet?.username}}</h3>
              </div>
              <div class="form-group col-md-6">
-                 <p>Hospital Name</p>
+                 <p *ngIf="role!='user'">Hospital Name</p>
+                 <p *ngIf="role =='user'">NIC Number</p>
                 <h3>{{dataSet?.hospitalName}}</h3>
              </div>
              
