--- a/HHIS_Frontend/HHISIT2018144/src/app/userDetails/user-dashboard/user-dashboard.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/userDetails/user-dashboard/user-dashboard.component.scss
@@ -38,6 +38,30 @@ mat-toolbar {
 
   mat-tab-group{
       height: 89vh;
-      background-color: #f1eded;
+      background-color: #e7f0fdd4
+  }
+
+  mat-tab-label mat-tab-label{
+    background: #006eff;
+  }
+
+  
+  .staffTable {
+    margin: 0px auto;
+      width: 95%;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.589);
+    }
+  .staffTableTop{
+      width: 95%;
+  }
+  
+  th{
+    font-size: bold;
+    color: #6575eb;
+    background-color: #dde2f4d5;
+  }
+  mat-paginator{
+    font-size: bold;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   }
 
